<resources>
    <string name="app_name">Galleryit</string>
    <string name="open_short_cut_action" translatable="false">open.short.cut.Action</string>
    <string name="core_shortcut_short_label_uninstall">Uninstall</string>
    <string name="core_shortcut_long_label_uninstall">Uninstall</string>
    <string name="core_shortcut_short_label_settings">Setting</string>
    <string name="core_shortcut_long_label_settings">Setting</string>
    <string name="core_back_button_desc">Back</string>
    <string name="core_feedback_title">What problems you encounter during use</string>
    <string name="core_feedback_subtitle">We will bring you a better experience.</string>
    <string name="core_feedback_illustration_desc">Hình minh họa</string>
    <string name="core_option_1_text">Cannot find the deleted image</string>
    <string name="core_rescan_button">Rescan</string>
    <string name="core_option_2_text">Nothing interesting anymore</string>
    <string name="core_explore_button">Explore</string>
    <string name="core_dont_uninstall_button">Don\'t uninstall yet</string>
    <string name="core_still_uninstall_button">Still want to uninstall</string>
    <!-- ... các string khác ... -->
    <string name="core_uninstall_feedback_title">Why uninstall All Recovery - Photos, Videos?</string>
    <string name="core_reason_cant_find_photos">Can\'t find deleted photos</string>
    <string name="core_reason_doesnt_restore">Doesn\'t correctly restore the desired image</string>
    <string name="core_reason_difficulty_recovering">Difficulty in recovering other files</string>
    <string name="core_reason_too_many_ads">Too many ads</string>
    <string name="core_cancel_button">Cancel</string>
    <string name="core_uninstall_button">Uninstall</string>
    <string name="core_common_save">Save</string>
    <string name="core_screen_language">Language</string>
    <string name="core_common_skip">Skip</string>
    <string name="core_common_continue">Continue</string>
    <string name="core_onboarding_title_1">Đây là dòng tutorial 1</string>
    <string name="core_onboarding_title_2">Đây là dòng tutorial 2</string>
    <string name="core_onboarding_title_3">Đây là dòng tutorial 3</string>
    <string name="core_onboarding_action_next">Next</string>
    <string name="core_onboarding_action_get_start">Get started</string>
    <string name="core_apply_language">Đang áp dụng ngôn ngữ…</string>
    <string name="shortcut_short_label_screen_1">Screen 1</string>
    <string name="shortcut_long_label_screen_1">Screen 1</string>
    <string name="shortcut_short_label_screen_2">Screen 2</string>
    <string name="shortcut_long_label_screen_2">Screen 2</string>
    <string name="exit_the_application">Exit The Application?</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="common_yes">Yes</string>
    <string name="common_no">No</string>

    <string name="msg_update_downloaded">An update has just been downloaded.</string>
    <string name="text_restart">Restart</string>

    <string name="text_recent">Recent</string>

    <string name="text_settings">Settings</string>
    <string name="text_skip">Skip</string>
    <string name="text_close">Close</string>

    <string name="msg_write_storage">To make it more convenient to use the application, you can grant permissions to the application at \n\n[Setting] &gt; [Permission] &gt; \n[Photos and videos] &gt; [Always allow all]</string>
    <string name="msg_permission">"If you reject the permissions, you can not use this app\n\nPlease turn on permissions at [Setting] > [Permission]"</string>

    <string name="tab_all">All</string>
    <string name="tab_photos">Photos</string>
    <string name="tab_videos">Videos</string>

    <string name="text_locker">Locker</string>
    <string name="text_editor">Editor</string>
    <string name="text_clean_up">Clean Up</string>

    <string name="text_forgot_password">Forgot password?</string>
    <string name="msg_passcode_is_incorrect">Passcode is incorrect</string>
    <string name="text_set_passcode">Set Passcode</string>

    <string name="text_switch_to_pin">Switch to PIN</string>
    <string name="text_switch_to_pattern">Switch to Pattern</string>
    <string name="msg_passcode_setup_completed_successfully">Passcode setup completed successfully</string>
    <string name="msg_passcode_not_saved">Passcode was not saved</string>
    <string name="msg_your_pattern_must_have_at_least_4_dots">Your pattern must have at least 4 dots</string>
    <string name="msg_pattern_must_have_at_least_4_dots">Pattern must have at least 4 dots</string>
    <string name="msg_passcode_updated_successfully">Passcode updated successfully</string>

    <string name="title_lock_create_pin_enter">Enter new PIN</string>
    <string name="title_lock_create_pin_confirm">Confirm PIN</string>
    <string name="title_lock_create_pattern_enter">Draw new pattern</string>
    <string name="title_lock_create_pattern_confirm">Confirm pattern</string>
    <string name="title_lock_change_pin_enter">Enter new PIN</string>
    <string name="title_lock_change_pin_confirm">Confirm new PIN</string>
    <string name="title_lock_change_pattern_enter">Draw new pattern</string>
    <string name="title_lock_change_pattern_confirm">Confirm new pattern</string>
    <string name="title_lock_reset_pin_enter">Reset PIN</string>
    <string name="title_lock_reset_pin_confirm">Confirm new PIN</string>
    <string name="title_lock_reset_pattern_enter">Reset pattern</string>
    <string name="title_lock_reset_pattern_confirm">Confirm new pattern</string>

    <string name="text_security_question">Security Question</string>
    <string name="text_select_question">Select Question</string>
    <string name="text_answer">Answer</string>
    <string name="text_confirm">Confirm</string>
    <string name="text_type_your_answer_here">Type your answer here</string>
    <string name="text_des_security_question">This question is used to verify your identity in case you forget your passcode.</string>
</resources>