<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/core_screen_background_light">

    <com.core.baseui.toolbar.CoreToolbarView
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:ctv_tv_title="@string/core_uninstall_feedback_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Nhóm các lựa chọn Radio -->
    <RadioGroup
        android:id="@+id/reasons_radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        android:paddingTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <RadioButton
            android:id="@+id/reason1"
            style="@style/RatioButtonFeedback"
            android:text="@string/core_reason_cant_find_photos" />

        <RadioButton
            android:id="@+id/reason2"
            style="@style/RatioButtonFeedback"
            android:text="@string/core_reason_doesnt_restore" />

        <RadioButton
            android:id="@+id/reason3"
            style="@style/RatioButtonFeedback"
            android:text="@string/core_reason_difficulty_recovering" />

        <RadioButton
            android:id="@+id/reason4"
            style="@style/RatioButtonFeedback"
            android:text="@string/core_reason_too_many_ads" />

    </RadioGroup>

    <!-- Các nút hành động -->
    <LinearLayout
        android:id="@+id/action_buttons_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reasons_radio_group">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:paddingVertical="14dp"
            android:text="@string/core_cancel_button"
            app:cornerRadius="28dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/uninstall_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:paddingVertical="14dp"
            android:text="@string/core_uninstall_button"
            app:cornerRadius="28dp" />

    </LinearLayout>

    <!-- Placeholder cho Quảng cáo -->
    <FrameLayout
        android:id="@+id/ad_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <!-- SDK quảng cáo của bạn sẽ được đặt ở đây -->

        <com.core.ads.customviews.ads.BannerNativeContainerLayout
            android:id="@+id/layoutBannerNative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>