<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCEDFF"
    android:orientation="vertical">

    <com.core.baseui.toolbar.CoreToolbarView
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:ctv_ic_back_show="false"
        app:ctv_tv_action_enable="false"
        app:ctv_tv_action_show="true"
        app:ctv_tv_action_text="@string/core_common_save"
        app:ctv_tv_title="@string/core_screen_language" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvLanguage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_12dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/core_item_language_ltr" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/lnApplyLoading"
            android:visibility="gone"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <ProgressBar
                android:layout_width="@dimen/_60dp"
                android:indeterminateTint="#2196F3"
                android:layout_height="@dimen/_60dp"/>

            <TextView
                android:textColor="@color/black"
                android:text="@string/core_apply_language"
                style="@style/Title16Medium"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </FrameLayout>


    <FrameLayout
        android:id="@+id/layout_ads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.core.ads.customviews.ads.BannerNativeContainerLayout
            android:id="@+id/layout_banner_native"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/black" />
    </FrameLayout>

</androidx.appcompat.widget.LinearLayoutCompat>